@@ -12,8 +12,6 @@ applyfilter \- apply filter settings to news spool
 .B applyfilter -V
 .PP
 .B applyfilter [-vnc] [-D debugmode] [-F configfile] object [...]
-.PP
-.B applyfilter [-v] [-D debugmode] [-F configfile] -C Message-ID [...]
 
 .SH DESCRIPTION
 .B Leafnode
@@ -58,12 +56,6 @@ The files are expected to contain one news article each.
 .TP
 .I -v
 Be verbose.
-.TP
-.I -C
-Switch to cancel mode, manually remove articles with given Message-IDs.
-Note that the Message-IDs must be given in angle brackets, which means
-that you will need to protect them from the shell, example:
-applyfilter -C '<some.1234.id@killme.example.org>'
 .IP
 The cancel will only remove the article locally. No control message will
 be generated or sent to other hosts.
